# ai-meishi

./: .coverage  .env.example  .gitignore  BACKEND_CODEX_INSTRUCTIONS.md  Dockerfile  FRONTEND_V0_INSTRUCTIONS.md  WORKFLOW_GUIDE.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts
alembic/: env.py
alembic/versions/: 0001_create_tables.py
app/: config.py  database.py  globals.css  layout.tsx  main.py  models.py  page.tsx
app/api/v1/files/analyze/: route.ts
app/api/v1/idml/export/: route.ts
app/api/v1/pdf/export/: route.ts
app/cards/create/: page.tsx
app/cards/manage/: page.tsx
app/editor/: page.tsx
app/models/: __init__.py  database.py
app/services/: acrobat_mcp_client.py  extraction.py  gemini_client.py  hybrid_analyzer.py  image_analyzer.py  logo_detector.py  openai_client.py  pdf_export.py  template_store.py
app/templates/register/: page.tsx
app/templates/search/: page.tsx
components/: business-card-preview.tsx  export-button.tsx  field-editor.tsx  file-upload-card.tsx  header.tsx  idml-export-button.tsx  template-saved-toast.tsx  template-selector.tsx  toast-container.tsx  upload-section.tsx
components/ui/: card.tsx
hooks/: use-preview-websocket.ts  use-toast.ts
lib/: api.ts  card-store.ts  store.ts  template-store.ts  types.ts
src/: pyproject.toml
src/ai_meishi/: analyzer.py  api.py  main.py  models.py  pdf_exporter.py  websocket.py
src/ai_meishi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_acrobat_mcp.py  test_analyzer.py  test_api.py  test_hybrid_extraction.py  test_main.py  test_openai_integration.py  test_pdf_export.py  test_pdf_exporter.py  test_services.py
